--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4"
+serde = { version = "1.0.198", features = ["derive"]}
+env_logger = "0.11.3"
+anyhow = "1.0.82"
+tokio = {version="1.37.0", features=["full"]}
+clap = { version="4.5.4", features=["derive"] }
+actix-files = "0.6.5"
+tera = "1"
